# SlackSage

./: .gitignore  pyproject.toml  requirements.txt
app/: Home.py
