[project]
name = "ragbot"
version = "0.1.0"
description = "RAG-powered Slack Bot with Streamlit interface"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "langchain",
    "langchain-openai",
    "openai",
    "slack-bolt",
    "faiss-cpu",
    "google-api-python-client",
    "python-dotenv",
    "PyPDF2",
    "python-magic",
    "tiktoken",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"] 